[tool.poetry]
name = "pydantic-v1"
version = "0.1.0"
description = ""
authors = ["d-issy <12374694+d-issy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pydantic_sandbox"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^22.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
